data/derived/comb/progs/unify/prog3053.ml.out
Characters 65-66:
  | [] -> (x * y) :: a 
               ^
Error: This expression has type ('a -> 'b) -> ('c -> 'a) -> 'c -> 'b
       but an expression was expected of type int
